--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-router-dom": "^7.6.2",
     "react-vertical-timeline-component": "^3.6.0"
   },
   "devDependencies": {
